# whatsapp-backup-chat-viewer

./: .gitignore  README.md  pyproject.toml
src/exports/: to_txt.py
tests/unit/: test_exports_to_txt.py
tests/unit/data/: expected_export_to_txt_results.py
