[tool.poetry]
name = "whatsapp-backup-chat-viewer"
version = "0.0.0"
description = "Extract Whatsapp conversations from the app's SQLite database and exporting them as JSON or TXT files"
authors = ["Saurabh Ghanekar <ghanekarsaurabh8@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/Dexter2389/whatsapp-backup-chat-viewer"
repository = "https://github.com/Dexter2389/whatsapp-backup-chat-viewer?tab=readme-ov-file"
documentation = "https://github.com/Dexter2389/whatsapp-backup-chat-viewer?tab=readme-ov-file#usage"
packages = [
    { include = "src" },
    { include = "tests" }
]

include = [
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.4.0"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
deepdiff = "^5.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
